--- a/app/Pipfile
+++ b/app/Pipfile
@@ -1,11 +1,15 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
 
 [dev-packages]
+
+[packages]
+flask = "*"
+flask-sqlalchemy = "*"
+flask-login = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "2.7"
